apps/base/blog/blog-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog-public
  namespace: blog
spec:
  parentRefs:
    - name: istio-ingress-public
      namespace: istio-system
      sectionName: https-public-apex
  hostnames:
    - "abbottland.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: blog
          port: 80
